# Genesis

./: .env.example  .gitignore  .pre-commit-config.yaml  @AutomationLog.txt  CLAUDE.md  DESCRIPCION_DEL_PROYECTO.md  ERRORS_AND_SOLUTIONS.md  GENESIS_Colab.ipynb  GENESIS_DESKTOP.bat  INICIAR_GENESIS.bat  LEEME.txt  LEGAL.md  LICENSE  Makefile  Modelfile  Modelfile.genesis  Modelfile.genesis14  Modelfile.genesis30  Modelfile.genesisq3  PROJECT_EVOLUTION.md  README.md  ROADMAP.md  SETUP.md  _evotest.py  _evotest_result.txt  config.py  create_colab_zip.py  genesis.py  genesis_desktop.py  pyproject.toml  requirements.txt  run.bat  setup.bat  web_ui.py
config_profiles/: cloud_full.json  default.json  local_gpu.json  minimal.json
core/: __init__.py  abstraction_engine.py  action_tracker.py  adaptive_interface.py  adaptive_prompts.py  agents.py  anomaly_detector.py  architecture_evolver.py  assistant_identity.py  audio_output.py  auto_learner.py  autonomous_mode.py  autonomous_research_loop.py  bias_detector.py  brain.py  builder_engine.py  cabin_window.py  casting.py  causal_reasoner.py  chain_engine.py  clipboard_manager.py  code_architect.py  code_memory.py  code_snippets.py  cognitive_monitor.py  concept_synthesizer.py  config_manager.py  conflict_resolver.py  connections.py  consciousness_integrator.py  consensus_engine.py  context_engine.py  context_manager.py  context_router.py  conversation_analytics.py  curiosity.py  daily_briefing.py  dashboard.py  dashboard_api.py  debate.py  (+130 more)
docs/: AUDITORIA_2026-06-10.md
plugin_registry/: manifest.json
plugins/: bookmark_plugin.py  calculator_plugin.py  example_plugin.py  focus_timer_plugin.py
templates/: index.html
tests/: _run_all.py  test_all_improvements.py  test_phase19.py  test_phase19_full.py  test_phase20.py  test_phase21.py  test_phase22.py  test_phase23.py  test_provider_router.py  test_qwen_e2e.py  test_smoke.py  test_v1_2.py  test_v1_3.py  test_v1_4.py  test_v1_5.py  (+32 more)
(+10 files in other folders)
